samples/_failures_safe/1761437838_68f0b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47797126.c: In function ‘main’:
./samples/SAFE/__tmp_47797126.c:154:20: error: missing terminating " character
  154 |             printf(" - Compressed
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_47797126.c:154:13: error: expected expression at end of input
  154 |             printf(" - Compressed
      |             ^~~~~~
./samples/SAFE/__tmp_47797126.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47797126.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47797126.c:154:13: error: expected declaration or statement at end of input
